[project]
name = "listenercli"
version = "0.1.0"
description = "Private CLI based speech-to-text tool"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "click>=8.3.1",
    "numpy>=2.3.5",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
    "sounddevice>=0.5.3",
    "faster-whisper>=1.0.0",
]

[project.scripts]
listenercli = "ListenerCLI.cli:main"
